// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CalendarioEspiritual > should render in loading state 1`] = `
<div>
  <div
    class="group/card flex flex-col gap-4 overflow-hidden rounded-xl py-4 text-sm text-card-foreground ring-1 ring-foreground/10 has-data-[slot=card-footer]:pb-0 has-[>img:first-child]:pt-0 data-[size=sm]:gap-3 data-[size=sm]:py-3 data-[size=sm]:has-data-[slot=card-footer]:pb-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl bg-slate-900/50 border-slate-700/50"
    data-size="default"
    data-slot="card"
  >
    <div
      class="group/card-header @container/card-header grid auto-rows-min items-start gap-1 rounded-t-xl px-4 group-data-[size=sm]/card:px-3 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-4 group-data-[size=sm]/card:[.border-b]:pb-3 pb-4"
      data-slot="card-header"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="p-2 rounded-lg bg-purple-500/20"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-calendar w-5 h-5 text-purple-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v4"
              />
              <path
                d="M16 2v4"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M3 10h18"
              />
            </svg>
          </div>
          <div
            class="font-heading group-data-[size=sm]/card:text-sm text-lg font-semibold text-slate-100"
            data-slot="card-title"
          >
            Calendário Espiritual
          </div>
        </div>
        <button
          class="group/button inline-flex shrink-0 items-center justify-center border border-transparent bg-clip-padding font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 hover:bg-muted aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 h-7 gap-1 rounded-[min(var(--radius-md),12px)] px-2.5 text-[0.8rem] in-data-[slot=button-group]:rounded-lg has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&_svg:not([class*='size-'])]:size-3.5 text-slate-400 hover:text-slate-100"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          Hoje
        </button>
      </div>
    </div>
    <div
      class="px-4 group-data-[size=sm]/card:px-3"
      data-slot="card-content"
    >
      <div
        class="flex items-center justify-between mb-4"
      >
        <button
          class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 size-8 h-8 w-8 text-slate-400 hover:text-slate-100"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-left w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15 18-6-6 6-6"
            />
          </svg>
        </button>
        <h3
          class="text-base font-medium text-slate-100"
        >
          Maio
           
          2026
        </h3>
        <button
          class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 size-8 h-8 w-8 text-slate-400 hover:text-slate-100"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </button>
      </div>
      <div
        class="grid grid-cols-7 gap-1 mb-2"
      >
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Dom
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Seg
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Ter
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Qua
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Qui
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Sex
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Sáb
        </div>
      </div>
      <div
        class="grid grid-cols-7 gap-1"
      >
        <div
          class="aspect-square"
        />
        <div
          class="aspect-square"
        />
        <div
          class="aspect-square"
        />
        <div
          class="aspect-square"
        />
        <div
          class="aspect-square"
        />
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            1
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            2
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            3
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            4
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            5
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            6
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            7
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            8
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            9
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            10
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            11
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            12
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  font-semibold
                "
        >
          <span>
            13
          </span>
          <div
            class="w-1.5 h-1.5 rounded-full mt-0.5 bg-ritual-500"
          />
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            14
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            15
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            16
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            17
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            18
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            19
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            20
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            21
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            22
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            23
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            24
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            25
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            26
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            27
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            28
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  bg-purple-500/30 text-purple-300 ring-1 ring-purple-500/50
                  
                "
        >
          <span>
            29
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            30
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            31
          </span>
        </div>
      </div>
      <div
        class="mt-6"
      >
        <h4
          class="text-sm font-medium text-slate-300 mb-3"
        >
          Eventos de 
          Maio
        </h4>
        <div
          class="space-y-2"
        >
          <button
            class="
                    w-full flex items-center gap-3 p-3 rounded-lg border
                    transition-all text-left
                    bg-purple-500/20 text-purple-400 border-purple-500/30
                  "
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-sparkles w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
              />
              <path
                d="M20 2v4"
              />
              <path
                d="M22 4h-4"
              />
              <circle
                cx="4"
                cy="20"
                r="2"
              />
            </svg>
            <div
              class="flex-1 min-w-0"
            >
              <p
                class="font-medium text-slate-100 truncate"
              >
                Dia de Oxum
              </p>
              <p
                class="text-xs text-slate-400 truncate"
              >
                Celebração da energia do ouro
              </p>
            </div>
            <span
              class="text-xs text-slate-400"
            >
              13
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CalendarioEspiritual > should render the spiritual calendar 1`] = `
<div>
  <div
    class="group/card flex flex-col gap-4 overflow-hidden rounded-xl py-4 text-sm text-card-foreground ring-1 ring-foreground/10 has-data-[slot=card-footer]:pb-0 has-[>img:first-child]:pt-0 data-[size=sm]:gap-3 data-[size=sm]:py-3 data-[size=sm]:has-data-[slot=card-footer]:pb-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl bg-slate-900/50 border-slate-700/50"
    data-size="default"
    data-slot="card"
  >
    <div
      class="group/card-header @container/card-header grid auto-rows-min items-start gap-1 rounded-t-xl px-4 group-data-[size=sm]/card:px-3 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-4 group-data-[size=sm]/card:[.border-b]:pb-3 pb-4"
      data-slot="card-header"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="p-2 rounded-lg bg-purple-500/20"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-calendar w-5 h-5 text-purple-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v4"
              />
              <path
                d="M16 2v4"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M3 10h18"
              />
            </svg>
          </div>
          <div
            class="font-heading group-data-[size=sm]/card:text-sm text-lg font-semibold text-slate-100"
            data-slot="card-title"
          >
            Calendário Espiritual
          </div>
        </div>
        <button
          class="group/button inline-flex shrink-0 items-center justify-center border border-transparent bg-clip-padding font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 hover:bg-muted aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 h-7 gap-1 rounded-[min(var(--radius-md),12px)] px-2.5 text-[0.8rem] in-data-[slot=button-group]:rounded-lg has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&_svg:not([class*='size-'])]:size-3.5 text-slate-400 hover:text-slate-100"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          Hoje
        </button>
      </div>
    </div>
    <div
      class="px-4 group-data-[size=sm]/card:px-3"
      data-slot="card-content"
    >
      <div
        class="flex items-center justify-between mb-4"
      >
        <button
          class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 size-8 h-8 w-8 text-slate-400 hover:text-slate-100"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-left w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15 18-6-6 6-6"
            />
          </svg>
        </button>
        <h3
          class="text-base font-medium text-slate-100"
        >
          Maio
           
          2026
        </h3>
        <button
          class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 size-8 h-8 w-8 text-slate-400 hover:text-slate-100"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </button>
      </div>
      <div
        class="grid grid-cols-7 gap-1 mb-2"
      >
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Dom
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Seg
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Ter
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Qua
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Qui
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Sex
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Sáb
        </div>
      </div>
      <div
        class="grid grid-cols-7 gap-1"
      >
        <div
          class="aspect-square"
        />
        <div
          class="aspect-square"
        />
        <div
          class="aspect-square"
        />
        <div
          class="aspect-square"
        />
        <div
          class="aspect-square"
        />
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            1
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            2
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            3
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            4
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            5
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            6
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            7
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            8
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            9
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            10
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            11
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            12
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  font-semibold
                "
        >
          <span>
            13
          </span>
          <div
            class="w-1.5 h-1.5 rounded-full mt-0.5 bg-ritual-500"
          />
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            14
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            15
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            16
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            17
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            18
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            19
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            20
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            21
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            22
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            23
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            24
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            25
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            26
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            27
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            28
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  bg-purple-500/30 text-purple-300 ring-1 ring-purple-500/50
                  
                "
        >
          <span>
            29
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            30
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            31
          </span>
        </div>
      </div>
      <div
        class="mt-6"
      >
        <h4
          class="text-sm font-medium text-slate-300 mb-3"
        >
          Eventos de 
          Maio
        </h4>
        <div
          class="space-y-2"
        >
          <button
            class="
                    w-full flex items-center gap-3 p-3 rounded-lg border
                    transition-all text-left
                    bg-purple-500/20 text-purple-400 border-purple-500/30
                  "
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-sparkles w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
              />
              <path
                d="M20 2v4"
              />
              <path
                d="M22 4h-4"
              />
              <circle
                cx="4"
                cy="20"
                r="2"
              />
            </svg>
            <div
              class="flex-1 min-w-0"
            >
              <p
                class="font-medium text-slate-100 truncate"
              >
                Dia de Oxum
              </p>
              <p
                class="text-xs text-slate-400 truncate"
              >
                Celebração da energia do ouro
              </p>
            </div>
            <span
              class="text-xs text-slate-400"
            >
              13
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CalendarioEspiritual > should render with custom className 1`] = `
<div>
  <div
    class="group/card flex flex-col gap-4 overflow-hidden rounded-xl py-4 text-sm text-card-foreground ring-1 ring-foreground/10 has-data-[slot=card-footer]:pb-0 has-[>img:first-child]:pt-0 data-[size=sm]:gap-3 data-[size=sm]:py-3 data-[size=sm]:has-data-[slot=card-footer]:pb-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl bg-slate-900/50 border-slate-700/50 custom-class"
    data-size="default"
    data-slot="card"
  >
    <div
      class="group/card-header @container/card-header grid auto-rows-min items-start gap-1 rounded-t-xl px-4 group-data-[size=sm]/card:px-3 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-4 group-data-[size=sm]/card:[.border-b]:pb-3 pb-4"
      data-slot="card-header"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="p-2 rounded-lg bg-purple-500/20"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-calendar w-5 h-5 text-purple-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v4"
              />
              <path
                d="M16 2v4"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M3 10h18"
              />
            </svg>
          </div>
          <div
            class="font-heading group-data-[size=sm]/card:text-sm text-lg font-semibold text-slate-100"
            data-slot="card-title"
          >
            Calendário Espiritual
          </div>
        </div>
        <button
          class="group/button inline-flex shrink-0 items-center justify-center border border-transparent bg-clip-padding font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 hover:bg-muted aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 h-7 gap-1 rounded-[min(var(--radius-md),12px)] px-2.5 text-[0.8rem] in-data-[slot=button-group]:rounded-lg has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&_svg:not([class*='size-'])]:size-3.5 text-slate-400 hover:text-slate-100"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          Hoje
        </button>
      </div>
    </div>
    <div
      class="px-4 group-data-[size=sm]/card:px-3"
      data-slot="card-content"
    >
      <div
        class="flex items-center justify-between mb-4"
      >
        <button
          class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 size-8 h-8 w-8 text-slate-400 hover:text-slate-100"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-left w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15 18-6-6 6-6"
            />
          </svg>
        </button>
        <h3
          class="text-base font-medium text-slate-100"
        >
          Maio
           
          2026
        </h3>
        <button
          class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 size-8 h-8 w-8 text-slate-400 hover:text-slate-100"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </button>
      </div>
      <div
        class="grid grid-cols-7 gap-1 mb-2"
      >
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Dom
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Seg
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Ter
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Qua
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Qui
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Sex
        </div>
        <div
          class="text-center text-xs font-medium text-slate-500 py-2"
        >
          Sáb
        </div>
      </div>
      <div
        class="grid grid-cols-7 gap-1"
      >
        <div
          class="aspect-square"
        />
        <div
          class="aspect-square"
        />
        <div
          class="aspect-square"
        />
        <div
          class="aspect-square"
        />
        <div
          class="aspect-square"
        />
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            1
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            2
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            3
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            4
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            5
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            6
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            7
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            8
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            9
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            10
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            11
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            12
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  font-semibold
                "
        >
          <span>
            13
          </span>
          <div
            class="w-1.5 h-1.5 rounded-full mt-0.5 bg-ritual-500"
          />
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            14
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            15
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            16
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            17
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            18
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            19
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            20
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            21
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            22
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            23
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            24
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            25
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            26
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            27
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            28
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  bg-purple-500/30 text-purple-300 ring-1 ring-purple-500/50
                  
                "
        >
          <span>
            29
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            30
          </span>
        </div>
        <div
          class="
                  aspect-square flex flex-col items-center justify-center rounded-lg
                  text-sm font-medium transition-all cursor-pointer
                  text-slate-300 hover:bg-slate-800
                  
                "
        >
          <span>
            31
          </span>
        </div>
      </div>
      <div
        class="mt-6"
      >
        <h4
          class="text-sm font-medium text-slate-300 mb-3"
        >
          Eventos de 
          Maio
        </h4>
        <div
          class="space-y-2"
        >
          <button
            class="
                    w-full flex items-center gap-3 p-3 rounded-lg border
                    transition-all text-left
                    bg-purple-500/20 text-purple-400 border-purple-500/30
                  "
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-sparkles w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
              />
              <path
                d="M20 2v4"
              />
              <path
                d="M22 4h-4"
              />
              <circle
                cx="4"
                cy="20"
                r="2"
              />
            </svg>
            <div
              class="flex-1 min-w-0"
            >
              <p
                class="font-medium text-slate-100 truncate"
              >
                Dia de Oxum
              </p>
              <p
                class="text-xs text-slate-400 truncate"
              >
                Celebração da energia do ouro
              </p>
            </div>
            <span
              class="text-xs text-slate-400"
            >
              13
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SpiritualButton > should render as disabled 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground [a]:hover:bg-primary/80 h-8 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2"
    data-disabled=""
    data-slot="button"
    disabled=""
    tabindex="0"
    type="button"
  >
    Disabled
  </button>
</div>
`;

exports[`SpiritualButton > should render icon button 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground [a]:hover:bg-primary/80 size-8"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    +
  </button>
</div>
`;

exports[`SpiritualButton > should render with size: default 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground [a]:hover:bg-primary/80 h-8 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualButton > should render with size: icon 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground [a]:hover:bg-primary/80 size-8"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualButton > should render with size: icon-lg 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground [a]:hover:bg-primary/80 size-9"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualButton > should render with size: icon-sm 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground [a]:hover:bg-primary/80 size-7 rounded-[min(var(--radius-md),12px)] in-data-[slot=button-group]:rounded-lg"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualButton > should render with size: icon-xs 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-primary-foreground [a]:hover:bg-primary/80 size-6 rounded-[min(var(--radius-md),10px)] in-data-[slot=button-group]:rounded-lg [&_svg:not([class*='size-'])]:size-3"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualButton > should render with size: lg 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground [a]:hover:bg-primary/80 h-9 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualButton > should render with size: sm 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center border border-transparent bg-clip-padding font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-primary-foreground [a]:hover:bg-primary/80 h-7 gap-1 rounded-[min(var(--radius-md),12px)] px-2.5 text-[0.8rem] in-data-[slot=button-group]:rounded-lg has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&_svg:not([class*='size-'])]:size-3.5"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualButton > should render with size: xs 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center border border-transparent bg-clip-padding font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-primary-foreground [a]:hover:bg-primary/80 h-6 gap-1 rounded-[min(var(--radius-md),10px)] px-2 text-xs in-data-[slot=button-group]:rounded-lg has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&_svg:not([class*='size-'])]:size-3"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualButton > should render with variant: default 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground [a]:hover:bg-primary/80 h-8 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualButton > should render with variant: destructive 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:ring-3 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-destructive/10 text-destructive hover:bg-destructive/20 focus-visible:border-destructive/40 focus-visible:ring-destructive/20 dark:bg-destructive/20 dark:hover:bg-destructive/30 dark:focus-visible:ring-destructive/40 h-8 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualButton > should render with variant: ghost 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 h-8 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualButton > should render with variant: ghost-sacred 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center rounded-lg bg-clip-padding text-sm font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 border border-transparent text-spiritual-violet hover:bg-spiritual-violet-muted hover:border-spiritual-violet/30 h-8 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualButton > should render with variant: glow-violet 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border bg-clip-padding text-sm font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-spiritual-violet text-white border-spiritual-violet/50 shadow-[var(--shadow-glow-violet)] hover:shadow-[0_0_35px_rgba(139,92,246,0.6)] h-8 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualButton > should render with variant: golden 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border bg-clip-padding text-sm whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-gradient-to-r from-spiritual-gold-dark via-spiritual-gold to-spiritual-gold-dark text-slate-900 font-semibold border-spiritual-gold/50 hover:shadow-[var(--shadow-glow-gold)] active:brightness-95 h-8 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualButton > should render with variant: golden-outline 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center rounded-lg bg-clip-padding text-sm font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 border border-spiritual-gold/50 text-spiritual-gold bg-spiritual-gold-muted hover:bg-spiritual-gold/20 hover:border-spiritual-gold hover:shadow-[var(--shadow-glow-gold)] h-8 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualButton > should render with variant: link 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 text-primary underline-offset-4 hover:underline h-8 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualButton > should render with variant: outline 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border bg-clip-padding text-sm font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 border-border bg-background hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 h-8 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualButton > should render with variant: secondary 1`] = `
<div>
  <button
    class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all duration-250 ease-out-expo outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-secondary text-secondary-foreground hover:bg-secondary/80 aria-expanded:bg-secondary aria-expanded:text-secondary-foreground h-8 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`SpiritualCard > should render with custom className 1`] = `
<div>
  <div
    class="relative overflow-hidden transition-all duration-250 ease-out-expo bg-gradient-to-br from-card to-card/80 border border-border/50 shadow-card p-5 rounded-xl custom-class"
  >
    <div
      class="pt-4"
    >
      Custom Card
    </div>
  </div>
</div>
`;

exports[`SpiritualCard > should render with size: default 1`] = `
<div>
  <div
    class="relative overflow-hidden transition-all duration-250 ease-out-expo bg-gradient-to-br from-card to-card/80 border border-border/50 shadow-card p-5 rounded-xl"
  >
    <div
      class="pt-4"
    >
      Card Content
    </div>
  </div>
</div>
`;

exports[`SpiritualCard > should render with size: lg 1`] = `
<div>
  <div
    class="relative overflow-hidden transition-all duration-250 ease-out-expo bg-gradient-to-br from-card to-card/80 border border-border/50 shadow-card p-6 rounded-2xl"
  >
    <div
      class="pt-4"
    >
      Card Content
    </div>
  </div>
</div>
`;

exports[`SpiritualCard > should render with size: sm 1`] = `
<div>
  <div
    class="relative overflow-hidden transition-all duration-250 ease-out-expo bg-gradient-to-br from-card to-card/80 border border-border/50 shadow-card p-3 rounded-lg"
  >
    <div
      class="pt-4"
    >
      Card Content
    </div>
  </div>
</div>
`;

exports[`SpiritualCard > should render with variant: default 1`] = `
<div>
  <div
    class="relative overflow-hidden transition-all duration-250 ease-out-expo bg-gradient-to-br from-card to-card/80 border border-border/50 shadow-card p-5 rounded-xl"
  >
    <div
      class="flex flex-col space-y-1.5 pb-3 border-b border-spiritual-gold/10"
    >
      <div
        class="text-xl font-heading font-semibold text-spiritual-gold tracking-wide"
        style="font-family: var(--font-cinzel), serif;"
      >
        Card Title
      </div>
      <div
        class="text-sm text-muted-foreground leading-relaxed"
      >
        Card Description
      </div>
    </div>
    <div
      class="pt-4"
    >
      Card Content
    </div>
    <div
      class="flex items-center pt-4 mt-4 border-t border-border/30"
    >
      Card Footer
    </div>
  </div>
</div>
`;

exports[`SpiritualCard > should render with variant: elevated 1`] = `
<div>
  <div
    class="relative overflow-hidden transition-all duration-250 ease-out-expo bg-gradient-to-br from-card via-slate-800/50 to-card border border-border/30 shadow-[var(--shadow-card)] hover:shadow-[var(--shadow-glow-gold)] p-5 rounded-xl"
  >
    <div
      class="flex flex-col space-y-1.5 pb-3 border-b border-spiritual-gold/10"
    >
      <div
        class="text-xl font-heading font-semibold text-spiritual-gold tracking-wide"
        style="font-family: var(--font-cinzel), serif;"
      >
        Card Title
      </div>
      <div
        class="text-sm text-muted-foreground leading-relaxed"
      >
        Card Description
      </div>
    </div>
    <div
      class="pt-4"
    >
      Card Content
    </div>
    <div
      class="flex items-center pt-4 mt-4 border-t border-border/30"
    >
      Card Footer
    </div>
  </div>
</div>
`;

exports[`SpiritualCard > should render with variant: glow 1`] = `
<div>
  <div
    class="relative overflow-hidden transition-all duration-250 ease-out-expo bg-gradient-to-br from-card to-card/80 border border-spiritual-violet/30 shadow-[var(--shadow-glow-violet)] p-5 rounded-xl"
  >
    <div
      class="flex flex-col space-y-1.5 pb-3 border-b border-spiritual-gold/10"
    >
      <div
        class="text-xl font-heading font-semibold text-spiritual-gold tracking-wide"
        style="font-family: var(--font-cinzel), serif;"
      >
        Card Title
      </div>
      <div
        class="text-sm text-muted-foreground leading-relaxed"
      >
        Card Description
      </div>
    </div>
    <div
      class="pt-4"
    >
      Card Content
    </div>
    <div
      class="flex items-center pt-4 mt-4 border-t border-border/30"
    >
      Card Footer
    </div>
  </div>
</div>
`;

exports[`SpiritualCard > should render with variant: golden 1`] = `
<div>
  <div
    class="relative overflow-hidden transition-all duration-250 ease-out-expo bg-gradient-to-br from-spiritual-gold-muted to-card border border-spiritual-gold/30 shadow-[var(--shadow-glow-gold)] hover:shadow-[0_0_30px_rgba(212,175,55,0.5)] p-5 rounded-xl"
  >
    <div
      class="flex flex-col space-y-1.5 pb-3 border-b border-spiritual-gold/10"
    >
      <div
        class="text-xl font-heading font-semibold text-spiritual-gold tracking-wide"
        style="font-family: var(--font-cinzel), serif;"
      >
        Card Title
      </div>
      <div
        class="text-sm text-muted-foreground leading-relaxed"
      >
        Card Description
      </div>
    </div>
    <div
      class="pt-4"
    >
      Card Content
    </div>
    <div
      class="flex items-center pt-4 mt-4 border-t border-border/30"
    >
      Card Footer
    </div>
  </div>
</div>
`;
